--- a/apps/lite/ui/src/routes/project/$id/workspace/OutlineTree.module.css
+++ b/apps/lite/ui/src/routes/project/$id/workspace/OutlineTree.module.css
@@ -10,10 +10,16 @@
 	}
 }
 
+.changesContainer {
+	padding-inline: var(--panel-padding);
+}
+
 .headInfo {
 	display: flex;
 	row-gap: 12px;
 	flex-direction: column;
+	padding-inline: var(--panel-padding);
+	padding-bottom: var(--panel-padding);
 	overflow: auto;
 	scroll-padding: var(--panel-padding);
 }
